[tool.poetry]
name = "otus-warehouse-management"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
black = "^24.10.0"
isort = "^5.13.2"
pyupgrade = "^3.19.0"
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
